--- a/css/style.css
+++ b/css/style.css
@@ -780,9 +780,17 @@ header ul li a:hover::after {
 
 /*--------------gallary--------*/
 /*--------------map--------*/
+
+.top .heading  {
+  margin-left: 10%;
+}
+  
+
 .map iframe {
   width: 100%;
 }
+
+
 
 /*--------------map--------*/
 /*--------------footer--------*/
@@ -849,6 +857,10 @@ footer li:hover {
     margin-top: 10px;
   }
 
+  .btn1 {
+   background-color: red;
+  }
+
   .wrapper .text {
     width: 80%;
   }
@@ -878,15 +890,20 @@ footer li:hover {
   }
 
   .home .text {
-    margin: 10% 0 0 0;
+    margin: 30% 0 0 0;
+    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.9);
   }
 
   .home h1 {
     font-size: 40px;
   }
 
-  .about p,
   .home p {
+    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.9);
+    font-size: 13px;
+  }
+
+  .about p {
     margin: 50px 0 0 0;
   }
 
@@ -917,6 +934,3 @@ footer li:hover {
   }
 
 }
-
-
-
