--- a/css/style.css
+++ b/css/style.css
@@ -227,6 +227,10 @@ header ul li a:hover::after {
   height: 100%;
 }
 
+.home {
+  height: 450px;
+}
+
 
 
 .home .text {
@@ -350,6 +354,7 @@ button {
   .image {
     filter: none; /* Remove the blur effect after animation */
   }
+
   
   @keyframes textFadeIn {
     from {
@@ -391,63 +396,166 @@ button {
   grid-gap: 60px;
 }
 
-.book {
-  margin-left: 10%;
-  margin-top: 5%;
-  width: 100%;
-  height: 20vh;
-  color: white;
-}
-
-.book .input {
-
-  padding: 20px 40px;
-  background: white;
-  outline: none;
-  border: 2px solid white;
-  border-radius: 50px;
-  color: black;
-  margin-top: 20px;
-}
-
-.book .search {
-
-  padding: 20px 40px;
-  background: #FFD700;
-  outline: none;
-  border: 2px solid white;
-  border-radius: 50px;
-  color: white;
-  margin-top: 20px;
-
+.about {
+  margin-top: 100%;
 }
 
 
 
-input {
-  width: 100%;
-  border: 2px solid rgba(255, 255, 255, 0.1);
-  outline: none;
-  background: none;
-  margin-top: 20px;
-  color: black;
+
+
+/* For screen widths up to 320px (e.g., iPhone SE) */
+@media screen and (max-width: 320px) {
+  .about {
+    margin-top: 150px;
+    margin-bottom: 50px;
+  }
 }
 
-::placeholder {
-  color: black;
+/* For screen widths between 321px and 375px (e.g., iPhone 6, 6s, 7, 8) */
+@media screen and (min-width: 321px) and (max-width: 375px) {
+  .about {
+    margin-top: 200px;
+    margin-bottom: 100px;
+  }
+  .home {
+    margin-top: -10%;
+    margin-bottom: -20%;
+  }
 }
 
-.book .search {
-  width: 20%;
+/* For screen widths between 376px and 768px (e.g., various tablets) */
+@media screen and (min-width: 376px) and (max-width: 768px) {
+  .about {
+    margin-top: 30px;
+    margin-bottom: 90px;
+  }
+  .home {
+    margin-top: -10%;
+    margin-bottom: 25%;
+  }
+  
 }
 
-.book .search input {
-  background: none;
-  border: none;
-  font-weight: bold;
-  font-size: 20px;
+@media screen and (width: 360px) and (height: 740px) {
 
+  .about {
+    margin-bottom: 90px;
+  }
+  .home {
+    margin-top: 100px;
+    margin-bottom: -140px;
+  }
 }
+
+  /* Specific styles for 360x740 screen size */
+  @media screen and (width: 360px) and (height: 740px) {
+    .about {
+      margin-bottom: 90px;
+    }
+    .home {
+      margin-top: 120px;
+      margin-bottom: -100px;
+    }
+  }
+
+  @media screen and (width: 412px) and (height: 915px) {
+    .about {
+      margin-bottom: 90px;
+    }
+    .home {
+      margin-top: 120px;
+      margin-bottom: 80px;
+    }
+    /* Add your styles for 412x915 screens here */
+  }
+
+  @media screen and (width: 820px) and (height: 1180px) {
+    .about {
+      margin-bottom: 90px;
+    }
+    .home {
+      margin-top: 10%;
+      margin-bottom: 70%;
+    }
+
+    .nav-book {
+      color: #1E1E1E;
+      background-color: #FFD700;
+      padding: 2px 20px;
+    }
+    .nav-book:hover {
+      color: #1E1E1E;
+      background-color: #808080;
+      color: white;
+      padding: 20px 80px;
+    }
+    /* Add your styles for 820x1180 screens here */
+  }
+
+  @media screen and (width: 768px) and (height: 1024px) {
+    .left {
+      text-align: center; /* Center the content within the left column */
+    }
+  
+    .right {
+      text-align: center; /* Center the content within the right column */
+    }
+    footer {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      text-align: center; /* Center text content within the footer */
+    }
+   /* Add your styles for 768x1024 screens here */
+  }
+
+  @media screen and (width: 912px) and (height: 1368px) {
+    .about {
+      margin-bottom: 90px;
+    }
+    .home {
+      margin-top: 50%;
+      margin-bottom: -50%;
+    }  /* Add your styles for 912x1368 screens here */
+  }
+  @media screen and (width: 280px) and (height: 653px) {
+    .about {
+      margin-bottom: 90px;
+    }
+    .home {
+      margin-top: -50%;
+      margin-bottom: 20%;
+    } 
+    .home .text {
+      margin: 20% 0 0 0;
+      text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.9);
+    }
+  
+    .home h1 {
+      font-size: 20px;
+    }
+  
+    .home p {
+      text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.9);
+      font-size: 13px;
+    }
+    .left {
+      text-align: left; /* Center the content within the left column */
+    }
+  
+    .right {
+      text-align: left; /* Center the content within the right column */
+    }
+    #feedbacks-button {
+      margin-left: 30px;
+    }
+    /* Add your styles for 280x653 screens here */
+}
+
+
+
+
 
 /*--------------book--------*/
 /*--------------about--------*/
@@ -479,9 +587,6 @@ input {
 }
 
 
-.about {
-  margin-bottom: 50px;
-}
 
 .about .img {
   position: relative;
