--- a/css/style.css
+++ b/css/style.css
@@ -231,8 +231,6 @@ header ul li a:hover::after {
   height: 450px;
 }
 
-
-
 .home .text {
   max-width: 50%;
   color: white;
@@ -400,15 +398,17 @@ button {
   margin-top: 100%;
 }
 
-
-
-
-
 /* For screen widths up to 320px (e.g., iPhone SE) */
 @media screen and (max-width: 320px) {
   .about {
     margin-top: 150px;
     margin-bottom: 50px;
+  }
+  footer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center; /* Center text content within the footer */
   }
 }
 
@@ -422,6 +422,12 @@ button {
     margin-top: -10%;
     margin-bottom: -20%;
   }
+  footer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center; /* Center text content within the footer */
+  }
 }
 
 /* For screen widths between 376px and 768px (e.g., various tablets) */
@@ -434,6 +440,12 @@ button {
     margin-top: -10%;
     margin-bottom: 25%;
   }
+  footer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center; /* Center text content within the footer */
+  }
   
 }
 
@@ -445,6 +457,12 @@ button {
   .home {
     margin-top: 100px;
     margin-bottom: -140px;
+  }
+  footer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center; /* Center text content within the footer */
   }
 }
 
@@ -466,6 +484,12 @@ button {
     .home {
       margin-top: 120px;
       margin-bottom: 80px;
+    }
+    footer {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      text-align: center; /* Center text content within the footer */
     }
     /* Add your styles for 412x915 screens here */
   }
@@ -518,6 +542,12 @@ button {
       margin-top: 50%;
       margin-bottom: -50%;
     }  /* Add your styles for 912x1368 screens here */
+    footer {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      text-align: center; /* Center text content within the footer */
+    }
   }
   @media screen and (width: 280px) and (height: 653px) {
     .about {
@@ -550,17 +580,19 @@ button {
     #feedbacks-button {
       margin-left: 30px;
     }
+    footer {
+      display: flex;
+      justify-content: left;
+      align-items: left;
+      text-align: left; /* Center text content within the footer */
+    }
     /* Add your styles for 280x653 screens here */
 }
-
-
-
-
 
 /*--------------book--------*/
 /*--------------about--------*/
 .top {
-  margin-top: 10%;
+  margin-top: 20%;
 }
 
 .mtop {
@@ -1111,6 +1143,7 @@ footer li:hover {
   }
 
 }
+
 
 
 
