--- a/css/style.css
+++ b/css/style.css
@@ -981,7 +981,7 @@ footer li:hover {
     margin-bottom: -20%;
   }
   .img {
-    left: 0 auto; 
+    left: 3%; 
   }
   footer {
     display: flex;
