--- a/css/booking.css
+++ b/css/booking.css
@@ -61,54 +61,6 @@ header nav {
   padding: 20px 80px;
 }
 
-
-
-/* Stile per il tema light */
-.light-theme {
-  background-color: #ffffff; /* Cambia il colore di sfondo per il tema light */
-  color: #1E1E1E; /* Cambia il colore del testo per il tema light */
-}
-
-/* Stile per il tema dark */
-.dark-theme {
-  background-color: #1E1E1E; /* Cambia il colore di sfondo per il tema dark */
-  color: #ffffff; /* Cambia il colore del testo per il tema dark */
-}
-
-
-/* Aggiungi questo stile per le icone verticali sulla destra */
-.icons-container {
-  position: absolute;
-  right: 25px;
-  top: 148px;
-}
-
-.theme-toggle {
-  position: absolute;
-  top: 100px;
-  right: 20px;
-  display: flex;
-  flex-direction: column;
-  z-index: 1000;
-}
-
-.theme-toggle button {
-  background: none;
-  border: none;
-  color: #333; /* Text color */
-  cursor: pointer;
-  font-size: 16px;
-  padding: 5px 10px;
-  transition: color 0.3s;
-}
-
-.theme-toggle button:hover {
-  color: #667; /* Text color on hover */
-}
-
-
-
-
 /* Stili per il menu (ul, li, a, ecc.) */
 
 
@@ -339,6 +291,7 @@ button {
     padding: 30px; /* Increased padding for more spacing */
     margin: 2% auto;
     max-width: 500px;
+    max-height: fit-content;
   }
   
   .book label {
@@ -486,6 +439,12 @@ button {
     footer .payment {
       grid-template-columns: repeat(4, 1fr);
     }
+    footer {
+      display: flex;
+      justify-content: left;
+      align-items: left;
+      text-align: left; /* Center text content within the footer */
+    }
   }
   
   @media only screen and (max-width:768px) {
@@ -524,4 +483,16 @@ button {
     }
   }
 
+
+  @media screen and (width: 912px) and (height: 1368px) {
+    footer {
+      margin-top: 300px;
+    }
+  }
+
+  @media screen and (width: 820px) and (height: 1180px) {
+    footer {
+      margin-top: 300px;
+    }
+  }
   
