--- a/css/style.css
+++ b/css/style.css
@@ -829,6 +829,7 @@ footer li:hover {
 /*--------------footer--------*/
 @media only screen and (max-width:768px) {
   .home .box .text {
+    margin-top: 40%;
     max-width: 100%;
   }
 
