--- a/css/style.css
+++ b/css/style.css
@@ -62,52 +62,6 @@ header nav {
   padding: 20px 80px;
 }
 
-
-
-/* Stile per il tema light */
-.light-theme {
-  background-color: #ffffff; /* Cambia il colore di sfondo per il tema light */
-  color: #1E1E1E; /* Cambia il colore del testo per il tema light */
-}
-
-/* Stile per il tema dark */
-.dark-theme {
-  background-color: #1E1E1E; /* Cambia il colore di sfondo per il tema dark */
-  color: #ffffff; /* Cambia il colore del testo per il tema dark */
-}
-
-
-/* Aggiungi questo stile per le icone verticali sulla destra */
-.icons-container {
-  position: absolute;
-  right: 25px;
-  top: 148px;
-}
-
-.theme-toggle {
-  position: absolute;
-  top: 100px;
-  right: 20px;
-  display: flex;
-  flex-direction: column;
-  z-index: 1000;
-}
-
-.theme-toggle button {
-  background: none;
-  border: none;
-  color: #333; /* Text color */
-  cursor: pointer;
-  font-size: 16px;
-  padding: 5px 10px;
-  transition: color 0.3s;
-}
-
-.theme-toggle button:hover {
-  color: #667; /* Text color on hover */
-}
-
-
 /* Stili per il menu (ul, li, a, ecc.) */
 
 
@@ -809,7 +763,6 @@ header ul li a:hover::after {
 }
 
 
-
 /*--------------map--------*/
 /*--------------footer--------*/
 footer h3 {
@@ -842,6 +795,10 @@ footer li:hover {
   .about .container,
   .book .container {
     flex-direction: column;
+  }
+
+  .about {
+    margin-top: 30vh;
   }
 
   .home .image img {
@@ -937,6 +894,18 @@ footer li:hover {
     margin-left: 40px;
   }
 }
+
+/*--------------media querries--------*/
+
+/* For screen widths up to 320px (e.g., iPhone SE) */
+
+
+/* For screen widths between 321px and 375px (e.g., iPhone 6, 6s, 7, 8) */
+
+
+
+/* For screen widths between 376px and 768px (e.g., various tablets) */
+
 
 
 
