--- a/css/style.css
+++ b/css/style.css
@@ -801,12 +801,13 @@ footer li:hover {
     margin-top: 30vh;
   }
 
-  .home .image img {
+ .home .image img {
     transform: translate(-50%, -50%); /* Center the image */
     z-index: -1;
+    width: auto; /* Allow the image to adjust its width */
+    height: 100vh; /* Set the height to 100vh */
     max-width: 100%; /* Limit the image width to the screen width */
-    height: 100vh;
-    overflow: hidden;
+    object-fit: cover; /* Maintain the aspect ratio and cover the container */
   }
 
 
