--- a/css/booking.css
+++ b/css/booking.css
@@ -501,7 +501,33 @@ button {
       margin-top: 300px;
     }
   }
+  @media screen and (width: 1024px) and (height: 1366px) {
+    .home {
+      margin-top: -20%;
+      margin-bottom: 50%;
+    }  /* Add your styles for 912x1368 screens here */
+    footer {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      text-align: center; /* Center text content within the footer */
+    }
+  }
 
+  @media screen and (width: 1024px) and (height: 600px) {
+    .home {
+      position: absolute;
+      margin-top: 0%;
+
+    }  /* Add your styles for 912x1368 screens here */
+    footer {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      text-align: center; /* Center text content within the footer */
+    }
+  }
+  
   
 
   
